--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,141 @@
+/* General Styles */
 body {
+  font-family: Arial, sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: blue;
+  padding: 0;
+  line-height: 1.6;
+  color: #c6c0c0;
+  background-color: #d2cfdb;
+  display: block;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1267cf;
+  padding: 10px 20px;
+  color: rgb(247, 245, 245);
+}
+
+.header .logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.navigation ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
+.navigation ul li {
+  margin: 0 15px;
+}
+
+.navigation ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.navigation ul li a:hover {
+  text-decoration: underline;
+}
+
+.search-bar input {
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+}
+.home{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0%;
+}
+/* Hero Section */
+.hero {
+  background-color: #a6aeb7;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 120px 120px;
+  margin-top: 0%;
+}
+
+.hero h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+.hero p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.cta-button button {
+  background-color: #FF9800;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.cta-button button:hover {
+  background-color: #E67E22;
+}
+
+/* Quick Links */
+.quick-links {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  background-color: #004085;
+}
+
+.quick-links .icon {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  flex: 1;
+  margin: 10px 10px;
+  font-size: 18px;
+  color: #007BFF;
+}
+
+.quick-links .icon:hover {
+  background-color: #007BFF;
+  color: white;
+  cursor: pointer;
+  
+}
+
+/* Footer */
+.footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 0%;
+  margin-top: 400px;
+}
+
+.footer .social-media a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+.footer .social-media a:hover {
+  text-decoration: underline;
 }
