--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body{
   padding: 0;
   line-height: 1.6;
   color: #f0ebeb;
-  background-color: #3413d6;
+  background-color: #007BFF;
   display: block;
 
 }
@@ -77,6 +77,7 @@ body{
 .hero{
   margin: 0;
   background-color: #004085;
+  text-align: center;
 }
   
 
@@ -125,6 +126,7 @@ body{
   margin: 10px 10px;
   font-size: 18px;
   color: #007BFF;
+  ;
 }
 
 .quick-links .icon:hover {
