--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body{
   padding: 0;
   line-height: 1.6;
   color: #f0ebeb;
-  background-color: #007BFF;
+  background-color: #004085;
   display: block;
 
 }
@@ -16,14 +16,14 @@ body{
     justify-content: space-around;
     align-items: center;
     background-color: #007BFF;
-   
     color: white;
 }
 .header .logo {
-  font-size: 10px;
+  font-size: 16px;
     font-weight: bold;
     display: block;
     box-sizing: border-box;
+    margin-left: 2px;
 }
 .content{
   display:inline-block
@@ -45,7 +45,7 @@ body{
 .navigation ul li a {
   color: white;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
   display: list-item;
 }
 
@@ -75,7 +75,7 @@ body{
   
 }
 .hero{
-  margin: 0;
+  margin-top: 100px;
   background-color: #004085;
   text-align: center;
 }
@@ -144,8 +144,7 @@ body{
   text-align: center;
   padding: 10px;
   margin-bottom: 0%;
-  
-  justify-items: center;
+ 
 }
 .services{
 
@@ -159,6 +158,7 @@ body{
   flex-direction: row;
   text-decoration: none;
   margin-bottom: 0%;
+  justify-content: space-between;
   
 
 }
