--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -1,5 +1,6 @@
 hero {
-    background-color: #004085;
+    background-image: url(/public/smiling-schoolgirls-book-roof.jpg);
+   /* background-color: #004085;*/
     color: rgb(255, 255, 255);
     text-align: center;
 
