--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body{
   padding: 0;
   line-height: 1.6;
   color: #f0ebeb;
-  background-color: #004085;
+  
   display: block;
 
 }
@@ -66,30 +66,38 @@ body{
 }
 /* Hero Section */
 .home{
-  display:block;
+  display:flex;
+  flex-direction: column;
   align-items: center;
   margin-top: 0%;
-
-  background-color: #004085;
+  background-image: url("/src/images/smiling-schoolgirls-book-roof.jpg");
+  background-size: cover;
   
   
 }
 .hero{
-  margin-top: 100px;
-  background-color: #004085;
-  text-align: center;
-}
+  margin-top: 400px;
   
+  justify-content: space-around;
+  text-align: center;
+  
+}
 
 .hero h1 {
+  color:black;
   font-size: 36px;
   font-weight: bold;
-  
+  justify-items: end;
+  text-decoration: solid;
+  font-weight: bold;
 }
 
 .hero p {
   font-size: 18px;
-  
+  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight:normal;
+
 }
 
 .cta-button button {
@@ -112,7 +120,6 @@ body{
   display: flex;
   justify-content: space-around;
   padding: 20px;
-  background-color: #004085;
   
 }
 
@@ -144,7 +151,7 @@ body{
   text-align: center;
   padding: 10px;
   margin-bottom: 0%;
- 
+  
 }
 .services{
 
